--- a/MVC/MVC/MVC.csproj
+++ b/MVC/MVC/MVC.csproj
@@ -6,4 +6,8 @@
 
 
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+  </ItemGroup>
 </Project>
