--- a/testMVCDocker/testMVCDocker.csproj
+++ b/testMVCDocker/testMVCDocker.csproj
@@ -8,4 +8,8 @@
 
 
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+  </ItemGroup>
 </Project>
