--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+	<CodeAnalysisRuleSet>../StyleCop/Nix.StyleCop.Analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
+    <PackageReference Include="Nix.StyleCop.Analyzers" Version="1.0.19" />
+	<AdditionalFiles Include="..\StyleCop\stylecop.json" />
   </ItemGroup>
 
 </Project>
