--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
     <PackageReference Include="Nix.StyleCop.Analyzers" Version="1.0.19" />
 	<AdditionalFiles Include="..\StyleCop\stylecop.json" />
