--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
     <PackageReference Include="Nix.StyleCop.Analyzers" Version="1.0.19" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
 	<AdditionalFiles Include="..\StyleCop\stylecop.json" />
   </ItemGroup>
 
